Added markdown to notebooks to clean them up. Need to work on paper and presentation.

--- a/Thesis - Alcohol.ipynb
+++ b/Thesis - Alcohol.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Alcohol Notebook "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -24,6 +38,13 @@
     "import shlex\n",
     "import sklearn\n",
     "from sklearn import metrics as skmet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting the Training Data"
    ]
   },
   {
@@ -89,6 +110,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What's in the Judgment Field"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -149,6 +177,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prime the Data for Maching Learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -160,6 +195,13 @@
     "X = data.loc[:, feature_cols]\n",
     "# now we want to create our response vector\n",
     "y = data.Denied"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feed the Data and Outcomes into LogisticRegression Model"
    ]
   },
   {
@@ -226,6 +268,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find Model Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -252,11 +301,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Future Work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. add alcohol use vs abuse to model\n",
+    "2. add rehab to model\n",
+    "3. add recency to model"
+   ]
   }
  ],
  "metadata": {
