--- a/Thesis - Financial.ipynb
+++ b/Thesis - Financial.ipynb
@@ -234,6 +234,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score for Financial Model:  0.5551848762857937\n"
+     ]
+    }
+   ],
+   "source": [
+    "financial_f1 = skmet.f1_score(y,new_pred_class)\n",
+    "print('F1 score for Financial Model: ',financial_f1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
