--- a/Thesis - Falsification.ipynb
+++ b/Thesis - Falsification.ipynb
@@ -234,6 +234,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score for Falsification Model:  0.689113124656782\n"
+     ]
+    }
+   ],
+   "source": [
+    "falsification_f1 = skmet.f1_score(y,new_pred_class)\n",
+    "print('F1 score for Falsification Model: ',falsification_f1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
