--- a/Thesis - Sexual.ipynb
+++ b/Thesis - Sexual.ipynb
@@ -234,6 +234,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score for Sexual Behavior Model:  0.6945161290322581\n"
+     ]
+    }
+   ],
+   "source": [
+    "sexual_f1 = skmet.f1_score(y,new_pred_class)\n",
+    "print('F1 score for Sexual Behavior Model: ',sexual_f1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
