Fixed two main notebooks and added more classifiers

--- a/Classifiers - Text.ipynb
+++ b/Classifiers - Text.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classifying Text Values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +22,21 @@
     "from sklearn.model_selection import train_test_split, cross_val_score, StratifiedKFold\n",
     "from sklearn.naive_bayes import BernoulliNB, MultinomialNB, GaussianNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Import data and set X & y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +67,7 @@
        "\"Applicant's drug abuse was not mitigated where marijuana use was recent, and had continued after Applicant stated an intent to refrain from drug use in the future. He falsified his drug abuse history on security questionnaires in March and October 1995 an\""
       ]
      },
-     "execution_count": 27,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +87,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,8 +97,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Set up bag of words for Judgment field"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +881,7 @@
        " 'years']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +902,7 @@
        "\twith 19 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +922,7 @@
        "(100, 758)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,28 +932,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "y = y.replace(True,1)"
+    "3. Change True values to 1.0 and False values to 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = y.replace(True,1).head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0    10862\n",
-       "0.0     9652\n",
+       "1.0    65\n",
+       "0.0    35\n",
        "Name: Denied, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,16 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = y.head(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +980,7 @@
        "(100, 758)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1000,7 @@
        "(100,)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,8 +1010,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Run train_test_split on the current X & y"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1036,7 @@
        "(67, 758)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 170,
    "metadata": {
     "scrolled": true
    },
@@ -1030,7 +1058,7 @@
        "(33, 758)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,14 +1068,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Run classifiers on current data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-------------------------------------------------------------------\n",
       "clf:  RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
@@ -1055,32 +1091,60 @@
       "            min_weight_fraction_leaf=0.0, n_estimators=5, n_jobs=None,\n",
       "            oob_score=False, random_state=None, verbose=0,\n",
       "            warm_start=False)\n",
-      "{} score: {} roc_auc 0.808802308802309\n",
-      "{} score: {} f1 0.8349457229700391\n",
-      "{} score: {} accuracy 0.7598039215686274\n",
-      "{} score: {} precision 0.6875\n",
-      "{} score: {} recall 0.9689754689754689\n",
+      "\n",
+      "\t* roc_auc  score:  0.7586580086580087\n",
+      "\t* f1  score:  0.8717228286663503\n",
+      "\t* accuracy  score:  0.7800245098039215\n",
+      "\t* precision  score:  0.7385432667690733\n",
+      "\t* recall  score:  0.9372294372294373\n",
+      "-------------------------------------------------------------------\n",
       "clf:  GaussianNB(priors=None, var_smoothing=1e-09)\n",
-      "{} score: {} roc_auc 0.7236652236652237\n",
-      "{} score: {} f1 0.842962962962963\n",
-      "{} score: {} accuracy 0.7787990196078431\n",
-      "{} score: {} precision 0.7898550724637681\n",
-      "{} score: {} recall 0.906926406926407\n",
+      "\n",
+      "\t* roc_auc  score:  0.7236652236652237\n",
+      "\t* f1  score:  0.842962962962963\n",
+      "\t* accuracy  score:  0.7787990196078431\n",
+      "\t* precision  score:  0.7898550724637681\n",
+      "\t* recall  score:  0.906926406926407\n",
+      "-------------------------------------------------------------------\n",
       "clf:  LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
       "          n_jobs=None, penalty='l2', random_state=None, solver='liblinear',\n",
       "          tol=0.0001, verbose=0, warm_start=False)\n",
-      "{} score: {} roc_auc 0.8932178932178932\n",
-      "{} score: {} f1 0.8211740041928722\n",
-      "{} score: {} accuracy 0.7205882352941178\n",
-      "{} score: {} precision 0.7056949422540821\n",
-      "{} score: {} recall 0.9841269841269842\n"
+      "\n",
+      "\t* roc_auc  score:  0.8932178932178932\n",
+      "\t* f1  score:  0.8211740041928722\n",
+      "\t* accuracy  score:  0.7205882352941178\n",
+      "\t* precision  score:  0.7056949422540821\n",
+      "\t* recall  score:  0.9841269841269842\n",
+      "-------------------------------------------------------------------\n",
+      "clf:  DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+      "            max_features=None, max_leaf_nodes=None,\n",
+      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "            min_samples_leaf=1, min_samples_split=2,\n",
+      "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+      "            splitter='best')\n",
+      "\n",
+      "\t* roc_auc  score:  0.6623376623376623\n",
+      "\t* f1  score:  0.866632160110421\n",
+      "\t* accuracy  score:  0.7083333333333334\n",
+      "\t* precision  score:  0.7897435897435897\n",
+      "\t* recall  score:  0.7676767676767676\n",
+      "-------------------------------------------------------------------\n",
+      "clf:  KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
+      "           weights='uniform')\n",
+      "\n",
+      "\t* roc_auc  score:  0.8481240981240982\n",
+      "\t* f1  score:  0.8632448516169448\n",
+      "\t* accuracy  score:  0.8192401960784313\n",
+      "\t* precision  score:  0.8504611330698287\n",
+      "\t* recall  score:  0.8766233766233765\n"
      ]
     }
    ],
    "source": [
-    "classifiers = [RandomForestClassifier(n_estimators=5), GaussianNB(), LogisticRegression(solver='liblinear')]\n",
-    "clf_names = ['RandomForest','GausianNB','LogisticRegression']\n",
+    "classifiers = [RandomForestClassifier(n_estimators=5), GaussianNB(), LogisticRegression(solver='liblinear'), DecisionTreeClassifier(criterion='gini'), KNeighborsClassifier(n_neighbors=6)]\n",
+    "clf_names = ['RandomForest','GausianNB','LogisticRegression','DecisionTreeClassRegressor', 'KNeighbors']\n",
     "metric_names = ['roc_auc','f1','accuracy','precision','recall']\n",
     "\n",
     "scv = StratifiedKFold(n_splits=3)\n",
@@ -1088,81 +1152,16 @@
     "scores_df = pd.DataFrame(index=metric_names,columns=clf_names)\n",
     "clf_scores = []\n",
     "for clf, name in zip(classifiers, clf_names):\n",
+    "    print('-------------------------------------------------------------------')\n",
     "    print('clf: ',clf)\n",
+    "    print('')\n",
     "    for metric in metric_names:\n",
     "        score = cross_val_score(clf,X.toarray(),y,scoring=metric, cv=scv).mean()\n",
     "        clf_scores.append(score)\n",
-    "        print('{} score: {}',metric, score)\n",
+    "        print('\\t*',metric,' score: ', score)\n",
     "    scores_df[name] = clf_scores\n",
     "    clf_scores = []\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
-       "        0.18726624],\n",
-       "       [0.        , 0.        , 0.        , ..., 0.        , 0.18282133,\n",
-       "        0.1713554 ],\n",
-       "       ...,\n",
-       "       [0.        , 0.        , 0.        , ..., 0.        , 0.3196671 ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
-       "        0.        ]])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
