Final version of Classifiers-Boolean and Classifiers-Text notebooks.

--- a/Classifiers - Boolean.ipynb
+++ b/Classifiers - Boolean.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
     "#bring in test data for model to predict\n",
-    "path_to_file = \"C:\\\\Users\\\\maweb\\\\Documents\\\\ThesisCode\\\\appeals_query.csv\"\n",
+    "path_to_file = \"https://raw.githubusercontent.com/mawebster9/ThesisCode/master/appeals_query.csv\"\n",
     "appeals_data = pd.read_csv(path_to_file, encoding='latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "Name: 0, dtype: bool"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "[10 rows x 43 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "Name: Denied, dtype: float64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "1.0"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
        "Name: Denied, dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
        "(20514, 43)"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "(20514,)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "(13744, 43)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 217,
    "metadata": {
     "scrolled": true
    },
@@ -746,7 +746,7 @@
        "(6770, 43)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -780,11 +780,11 @@
       "            oob_score=False, random_state=None, verbose=0,\n",
       "            warm_start=False)\n",
       "\n",
-      "\t* roc_auc  score:  0.9968192628251721\n",
-      "\t* f1  score:  0.9920831873079777\n",
-      "\t* accuracy  score:  0.9903476912446466\n",
-      "\t* precision  score:  0.9926309326232873\n",
-      "\t* recall  score:  0.9913459342702661\n",
+      "\t* roc_auc  score:  0.9972964792534058\n",
+      "\t* f1  score:  0.9894842046443553\n",
+      "\t* accuracy  score:  0.9927364322669961\n",
+      "\t* precision  score:  0.9983269686266153\n",
+      "\t* recall  score:  0.991530070903157\n",
       "-------------------------------------------------------------------\n",
       "clf:  GaussianNB(priors=None, var_smoothing=1e-09)\n",
       "\n",
@@ -812,10 +812,10 @@
       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
       "            splitter='best')\n",
       "\n",
-      "\t* roc_auc  score:  0.997044862847322\n",
-      "\t* f1  score:  0.9942168354114633\n",
-      "\t* accuracy  score:  0.9937114332574276\n",
-      "\t* precision  score:  0.9987903126349732\n",
+      "\t* roc_auc  score:  0.996940099476841\n",
+      "\t* f1  score:  0.9940782722280433\n",
+      "\t* accuracy  score:  0.9938089205236746\n",
+      "\t* precision  score:  0.9987910896378097\n",
       "\t* recall  score:  0.9896883994175575\n",
       "-------------------------------------------------------------------\n",
       "clf:  KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
